crates/sutura-app/tests/snapshots/revenue-total-june__rows.snap
---
source: crates/sutura-app/tests/golden.rs
expression: rows
---
columns:
  - period
  - revenue
rows:
  - - Text: 2026-06-01
    - Integer: 570022
