crates/sutura-app/tests/snapshots/revenue-total-june__rows@datafusion.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: stable(rows)
---
period	revenue
Text(2026-06-01)	Integer(570022)
